@@ -39,6 +39,7 @@
 # greeter-session = Session to load for greeter
 # greeter-hide-users = True to hide the user list
 # greeter-show-guest = True if the greeter should show a guest login option
+# greeter-show-manual-login = True if the greeter should offer a manual login option
 # user-session = Session to load for users
 # allow-guest = True if guest login is allowed
 # guest-session = Session to load for guests (overrides user-session)
@@ -64,6 +65,7 @@
 #greeter-session=example-gtk-gnome
 #greeter-hide-users=false
 #greeter-show-guest=true
+#greeter-show-manual-login=false
 #user-session=default
 #allow-guest=true
 #guest-session=UNIMPLEMENTED
